fixed buggy css for code examples
I noticed that code examples would show two vertical scrollbars all over the sytle-guide rather than one.  This css change fixed the issue.

--- a/css/docs.css
+++ b/css/docs.css
@@ -12,7 +12,6 @@ pre,
 	border-radius: 2px;
 	min-height: auto;
 	max-height: 340px;
-	overflow-y: auto;
 }
 
 .fixed > pre {
